[gd_scene load_steps=2 format=3 uid="uid://ms4uukon6dti"]

[ext_resource type="Script" path="res://GUI/main_menu.gd" id="1_llf6l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_llf6l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -50.5
offset_right = 67.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start New Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
